--- a/style.css
+++ b/style.css
@@ -10,16 +10,17 @@
     overflow-x:hidden;
 }
 .header{
+    position: fixed;
     display: flex;
     height: 10%;
     width: 100%;
-    background-color: black;
-    color: white;
+    background-color: transparent;
     justify-content: space-between;
     align-items: center;
 }
 header h1{
     margin: 6rem;
+    color: black;
 }
 .nav-bar{
     margin: 6rem;
@@ -31,7 +32,80 @@ header h1{
 }
 .nav-bar a{
     text-decoration: none;
-    color: white;
+    color: black;
+}
+#about-me{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: bisque;
+    width: 100%;
+    height: 100vh;
+}
+.desc{
+    width: 35%;
+}
+.desc p{
+    text-align: left;
+}
+.desc strong{
+    font-size: 2rem;
 }
 
+.image{
+    width: 40%;
+    height: 80%;
+    background-image: url("image.jpg");
+    border-radius: 50%;
+    background-size: cover;
+    background-position: center;
+}
+.icons{
+    display: flex;
+    flex-direction: column;
+    width:10%
+}
+#education{
+    width: 100%;
+    height: 100vh;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: thistle;
+}
+.e-box{
+    width: 18rem;
+    height: 18rem;
+    border-radius: 4rem;
+    background-color: darkgray;
+    position: relative;
+    transition: all 0.3s linear 0s;
 
+}
+#primary{
+    background-image: url("nooraniyah-english-school-rajkot_cover\ \(2\).jpg");
+    background-size: cover;
+}
+#higher{
+    background-image: url("st-marry.jpg");
+    background-size: cover;
+}
+#college{
+    background-image: url("Atmiya-University.jpg");
+    background-size: cover;
+}
+.grey{
+    position: absolute;
+    bottom: 2rem;
+    left: 2rem;
+    border-radius: 4rem;
+    background:white;
+   
+}
+.e-box:hover{
+    transform: scale(110%);
+}
+
+    
