--- a/style.css
+++ b/style.css
@@ -34,13 +34,15 @@ header h1{
     text-decoration: none;
     color: black;
 }
+.comm{
+    width: 100%;
+    height: 100vh;
+}
 #about-me{
     display: flex;
     justify-content: space-around;
     align-items: center;
     background-color: bisque;
-    width: 100%;
-    height: 100vh;
 }
 .desc{
     width: 35%;
@@ -55,7 +57,7 @@ header h1{
 .image{
     width: 40%;
     height: 80%;
-    background-image: url("image.jpg");
+    background-image: url("image/image.jpg");
     border-radius: 50%;
     background-size: cover;
     background-position: center;
@@ -66,8 +68,6 @@ header h1{
     width:10%
 }
 #education{
-    width: 100%;
-    height: 100vh;
     padding-left: 2rem;
     padding-right: 2rem;
     display: flex;
@@ -85,15 +85,15 @@ header h1{
 
 }
 #primary{
-    background-image: url("nooraniyah-english-school-rajkot_cover\ \(2\).jpg");
+    background-image: url("image/nooraniyah-english-school-rajkot_cover\ \(2\).jpg");
     background-size: cover;
 }
 #higher{
-    background-image: url("st-marry.jpg");
+    background-image: url("image/st-marry.jpg");
     background-size: cover;
 }
 #college{
-    background-image: url("Atmiya-University.jpg");
+    background-image: url("image/Atmiya-University.jpg");
     background-size: cover;
 }
 .grey{
@@ -101,11 +101,64 @@ header h1{
     bottom: 2rem;
     left: 2rem;
     border-radius: 4rem;
-    background:white;
+    
    
 }
 .e-box:hover{
     transform: scale(110%);
 }
 
-    
+#skills{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: darkkhaki;
+}
+.box{
+    width: 80%;
+    height: 80%;
+    padding:1rem;
+    /* background-color: antiquewhite; */
+    display: grid;
+    grid-template-rows: repeat(2,1fr);
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 2rem;
+    row-gap: 2rem;
+    justify-content: center;
+    align-items: center;
+}
+.s-box{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.glass{
+    position: relative;
+    width: 70%;
+    height: 90%;
+    background-color: black;
+    border-radius: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.glass h2{
+    color: white;
+}
+#html{
+    position: absolute;
+    width: 100%;
+    height: 0%;
+    bottom: 0;
+    border-radius: 2rem;
+    background-color: rgba(155, 204, 246, 0.722);
+    transition: all 3s linear 0s;
+}
+
+.glass:first-of-type  > #html{
+    height: 90%;
+    color:black
+}   
