--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
     font-family: Lora;
+    scroll-behavior: auto;
 }
 
 .container{
@@ -18,7 +20,13 @@
     width: 100%;
     background-color: transparent;
     justify-content: space-between;
+    background-color: #222;
+    z-index: 2;
     align-items: center;
+    box-shadow: 0px 1px 2px rgba(0,255,255,0.5), 
+                0px 2px 4px rgba(0,255,255,0.5), 
+                0px 4px 8px rgba(0,255,255,0.5), 
+                0px 8px 16px rgba(0,255,255,0.5);
 }
 .header h1{
     
@@ -26,6 +34,7 @@
     margin: 6rem;
     color: #DCD7C9;
     transition: all 1s linear 0s;
+    
 }
 .header h1:hover{
     text-shadow: 0 0 20px #fff, 0 0 30px #ffe868, 0 0 40px #88fdff, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
@@ -34,6 +43,7 @@
     margin: 6rem;
     display: flex;
     gap: 5rem;
+
 }
 .nav-bar li{
     list-style: none;
@@ -55,7 +65,7 @@
     justify-content: space-around;
     background-size: cover;
     align-items: center;
-    background-color:#1A120B;
+    background-color:#222;
 }
 .desc{
     color: #EEEEEE;
@@ -85,51 +95,82 @@
     text-shadow: 2px 2px #EEEEEE;
 }
 #education{
-    padding-left: 2rem;
-    padding-right: 2rem;
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    background-color: thistle;
+    align-items: flex-end;
+    background-color:#222;
 }
-.e-box{
-    width: 18rem;
-    height: 18rem;
-    border-radius: 4rem;
-    background-color: darkgray;
+.card-container {
+    position : relative;
+    bottom: 3.5rem;
+    width : 30%;
+    display : flex;
+    align-items : center;
+    justify-content : center;
+    flex-wrap : wrap;
+    padding : 30px;  
+  }
+  
+  .card-container .card {
     position: relative;
-    transition: all 0.3s linear 0s;
-
-}
-#primary{
-    background-image: url("image/nooraniyah-english-school-rajkot_cover\ \(2\).jpg");
-    background-size: cover;
-}
-#higher{
-    background-image: url("image/st-marry.jpg");
-    background-size: cover;
-}
-#college{
-    background-image: url("image/Atmiya-University.jpg");
-    background-size: cover;
-}
-.grey{
-    position: absolute;
-    bottom: 2rem;
-    left: 2rem;
-    border-radius: 4rem;
+    max-width : 90%;
+    height : 240px;  
+    background-color : #2d2d2d;
+    margin : 30px 10px;
+    padding : 20px 15px;
     
-   
-}
-.e-box:hover{
-    transform: scale(110%);
-}
-
+    display : flex;
+    flex-direction : column;
+    box-shadow : 0 5px 20px rgba(0, 255, 255, 0.753);
+    transition : 0.3s ease-in-out;
+    border-radius : 15px;
+  }
+  .card-container .card:hover {
+    height : 320px;    
+  }
+  
+  
+  .card-container .card .image {
+    position : relative;
+    width : 95%;
+    height : 260px;
+    
+    top : -40%;
+    left: 8px;
+    box-shadow : 0 5px 20px rgba(0, 255, 255, 0.2);
+    z-index : 1;
+  }
+  
+  .card-container .card .image img {
+    max-width : 100%;
+    border-radius : 15px;
+  }
+  
+  .card-container .card .content {
+    position : relative;
+    top : -140px;
+    padding : 10px 15px;
+    color : #ffffff;
+    text-align : center;
+    
+    visibility : hidden;
+    opacity : 0;
+    transition : 0.3s ease-in-out;
+      
+  }
+  
+  .card-container .card:hover .content {
+     margin-top : 30px;
+     visibility : visible;
+     opacity : 1;
+     transition-delay: 0.2s;
+    
+  }
 #skills{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: darkkhaki;
+    background-color: #222;
 }
 .box{
     width: 80%;
