added final touching

--- a/style.css
+++ b/style.css
@@ -93,6 +93,14 @@
     font-size: 2rem;
 }
 
+.profile{
+    width: 40%;
+    height: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
 .icons {
     display: flex;
     flex-direction: column;
